# This is a combination of 3 commits. # The first commit's message is: readme and .gitingore added, modified  composer.json
# This is the 2nd commit message:

vendor deleted

# This is the 3rd commit message:

added methods in  interfaces, refactor

fix

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "wrcx/laravel-osquery",
-    "description": "PHP Laravel wrapper for Osquery",
-    "keywords": ["osquery", "laravel"],
+    "description": "PHP wrapper for Osquery",
+    "keywords": ["osquery", "php"],
     "require": {
         "php": ">=5.5.9",
         "symfony/process": "~3.0",
